# Waveframe-Stamp

./: CHANGELOG.md  CITATION.cff  GETTING_STARTED.md  LICENSE  README.md  RELEASING.md  Stamp-Concept-and-Roadmap.md  pyproject.toml  stamp-validation-trace.json
.github/workflows/: stamp.yml
architecture/: Stamp-Implementation.md
archive/.github/workflows/: stamp-test.yml
archive/spec/: Stamp-Spec.md
archive/src/stamp/engine/: dependency_graph.py  loader.py
archive/stamp_golden_fixture/: artifact.md
docs/: OPERATING_MODEL.md  README.md
examples/: README.md  schema.json
figures/: README.md
fixtures/: README.md  fixtures-v1.json  npo-fixtures-v1.json
runner/: README.md  run_fixtures.py  run_npo_fixtures.py  run_smoke.py
schemas/: README.md  cdo-v1.schema.json  npo-v1.schema.json
scripts/: README.md
spec/: Stamp-Spec.md
src/stamp/cli/: main.py
src/stamp/engine/: controller.py  dependency_graph.py  fixer.py  loader.py  normalizer.py  parser.py  reporter.py  validator.py
stamp/: README.md  cdo.py  cli.py  discovery.py  extract.py  fix.py  normalize.py  remediation.py  schema.py  trace.py  trace_schema.py  validate.py
stamp/cli/: README.md  fix.py  main.py  validate.py
testdata/: README.md  artifact.json
tests/: README.md
traces/: README.md  stamp-validation-trace.json
