[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stamp-core"
version = "0.0.1"
description = "Schema-agnostic structural diagnostics and normalization engine."
readme = "README.md"
requires-python = ">=3.10"

# License intentionally TBD until governance decision is finalized
license = { text = "TBD" }

authors = [
  { name = "Shawn C. Wright", email = "swright@waveframelabs.org" }
]

dependencies = [
  "ruamel.yaml>=0.17.32",
  "jsonschema>=4.19.0"
]

[project.urls]
Homepage = "https://waveframelabs.org"
Source = "https://github.com/waveframe-labs/Waveframe-Stamp"
Issues = "https://github.com/waveframe-labs/Waveframe-Stamp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.0.0",
  "mypy>=1.0.0"
]

# Flat-layout package discovery (stamp/ at repo root)
[tool.setuptools.packages.find]
where = ["."]
include = ["stamp*"]
