[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waveframe-stamp"
version = "0.1.0"
description = "Schema-agnostic structural diagnostics engine for governed research artifacts."
readme = "README.md"
requires-python = ">=3.10"

license = { text = "Apache-2.0" }

authors = [
  { name = "Shawn C. Wright", email = "swright@waveframelabs.org" }
]

dependencies = [
  "ruamel.yaml>=0.17.32",
  "jsonschema>=4.19.0",
  "typer>=0.12.0"
]

[project.urls]
Homepage = "https://waveframelabs.org"
Source = "https://github.com/Waveframe-Labs/Waveframe-Stamp"
Issues = "https://github.com/Waveframe-Labs/Waveframe-Stamp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.0.0",
  "mypy>=1.0.0"
]

[project.scripts]
stamp = "stamp.cli.main:main"

# Flat-layout package discovery (stamp/ at repo root)
[tool.setuptools.packages.find]
where = ["."]
include = ["stamp*"]
